--- a/framework/source/resource/qx/mobile/less/_scroller.less
+++ b/framework/source/resource/qx/mobile/less/_scroller.less
@@ -1,6 +1,5 @@
 .scroll {
   position:relative;
-  z-index:1;
   width:auto/* your desired width, auto and 100% are fine */;
   height:auto/* element height */;
   overflow:hidden;
@@ -9,6 +8,5 @@
 .iscroll {
   width:100%;
   position:absolute;
-  z-index:1;
   padding-bottom:10px;/* todo: experimental*/
 }
